[gd_scene load_steps=5 format=3 uid="uid://dullob5nj5jne"]

[ext_resource type="Script" uid="uid://dgjvdtm8r07br" path="res://Scripts/Basic Scripts/checkpoint.gd" id="1_phkb0"]
[ext_resource type="Texture2D" uid="uid://d0d4n2ba1xxb5" path="res://Assets/sprites/flag-a.png" id="2_hs532"]
[ext_resource type="AudioStream" uid="uid://bu5rf2xg0sgj5" path="res://Assets/sounds/CheckPointReached.wav" id="3_7o1en"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bo7n7"]
size = Vector2(20, 192)

[node name="Checkpoint" type="Area2D"]
script = ExtResource("1_phkb0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -87)
shape = SubResource("RectangleShape2D_bo7n7")

[node name="RespawnPoint" type="Marker2D" parent="."]
position = Vector2(0, -48)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(12.75, -30.55)
scale = Vector2(2.7, 2.7)
texture = ExtResource("2_hs532")
region_enabled = true
region_rect = Rect2(1, 0, 15, 23)

[node name="SFX_CheckPoint" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_7o1en")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
